--- a/SimpleProject/SimpleProject/Common/Localization/Localizable.strings
+++ b/SimpleProject/SimpleProject/Common/Localization/Localizable.strings
@@ -1,6 +1,6 @@
 /* 
   Localizable.strings
-  Move Sandbox
+  Simple Project
 
   Created by Mateusz Mirkowski on 11/05/2018.
   Copyright © 2018 Mateusz Mirkowski. All rights reserved.
